<resources>
    <string name="app_name">设备监测器</string>
    <string name="title">设备当前状态</string>

    <string name="local_time_format">-- : -- : --</string>
    <string name="battery_percentage">0%</string>
    <string name="charging_status_title">电池状态</string>
    <string name="battery_temperature_title">电池温度</string>
    <string name="thermal_status_title">系统热状态</string>
    <string name="battery_current_title">电池电流</string>
    <string name="battery_voltage_title">电池电压</string>
    <string name="battery_power_title">瞬时功率</string>
    <string name="screen_refresh_rate">屏幕刷新率</string>
    <string name="cpu_temperature_title">CPU温度</string>
    <string name="cpu_frequency_title">CPU频率</string>
    <string name="memory_usage_title">内存占用</string>
    <string name="charger_condition">—</string>
    <string name="charger_temperature">— ℃</string>
    <string name="thermal_status">—</string>
    <string name="battery_current">— mA</string>
    <string name="battery_voltage">— mV</string>
    <string name="battery_power">— mW</string>
    <string name="refresh_rate">— Hz</string>
    <string name="cpu_temperature">— ℃</string>
    <string name="cpu_frequency">— MHz (—%)</string>
    <string name="memory_usage">— MB / — MB</string>
</resources>
